# datafusion-uwheel

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  check.sh  fetch_data.sh
.github/workflows/: rust.yml
benchmarks/nyc_taxi_bench/: Cargo.toml  README.md
benchmarks/nyc_taxi_bench/src/: main.rs
datafusion-uwheel/: Cargo.toml  README.md
datafusion-uwheel/examples/: nyc_taxi.rs
datafusion-uwheel/src/: builder.rs  exec.rs  expr.rs  lib.rs  wheels.rs
datafusion-uwheel/src/aggregator/: mod.rs
datafusion-uwheel/src/index/: mod.rs
examples/: nyc_taxi.rs
examples/memtable/: Cargo.toml
examples/memtable/src/: main.rs
examples/nyc_taxi/: Cargo.toml  README.md
examples/nyc_taxi/src/: main.rs
src/: builder.rs  exec.rs  lib.rs  min_max.rs
