[workspace]
resolver = "2"
members = ["benchmarks/nyc_taxi_bench", "datafusion-uwheel"]

[workspace.package]
version = "38.0.0"
edition = "2021"
authors = ["Max Meldrum <max@meldrum.se>"]
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
uwheel = { version = "0.2.0", default-features = false, features = [
    "sync",
    "min_max",
    "sum",
] }
datafusion = "38.0.0"
async-trait = "0.1.81"
chrono = "0.4.38"
bitpacking = "0.9.2"
tokio = "1.38.1"
futures = "0.3.30"
