[workspace]
resolver = "2"
members = ["benchmarks/nyc_taxi_bench", "datafusion-uwheel", "examples/*"]

[workspace.package]
version = "40.0.0"
edition = "2021"
authors = ["Max Meldrum <max@meldrum.se>"]
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
uwheel = { version = "0.2.1", default-features = false, features = [
  "sync",
  "min_max",
  "sum",
  "avg",
  "min",
  "max",
  "all",
] }
datafusion-uwheel = { path = "datafusion-uwheel", version = "40.0.0" }
datafusion = "46.0.0"
chrono = "0.4.38"
bitpacking = "0.9.2"
tokio = "1.38.1"
human_bytes = "0.4.3"
