[package]
name = "memtable"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
datafusion.workspace = true
datafusion-uwheel.workspace = true
tokio.workspace = true
chrono.workspace = true
human_bytes.workspace = true
